feat(backend): Add pagination to user search
The `GET /api/users` search endpoint returned the full list of matching
users for every request, which does not scale as the number of users
grows. Pagination is now applied across all layers:

- `UserRepository.searchUsers` now accepts a `Pageable` and returns a
  `Page<User>`. The fixed `ORDER BY` was removed since ordering is now
  controlled by the `Pageable` to keep pagination deterministic.
- `UserService.searchUsers` passes the pageable through and maps the
  result to `Page<UserSummaryResponse>`.
- `UserController.searchUser` accepts a `Pageable` with defaults of
  page=0, size=20, sorted by username, so existing clients that omit
  paging params keep working.

`SarvApplication` now enables
`@EnableSpringDataWebSupport(pageSerializationMode = VIA_DTO)` so pages
are serialized through a stable DTO instead of the unstable default
`PageImpl` serialization that Spring warns about.

Considerations:
- The search response shape changed from a bare JSON array to a
  paginated object (`content` + `page` metadata), so API clients need to
  read results from the `content` field.
- Service and controller tests were updated for the new signature and
  new tests cover default/respected paging params and pagination
  metadata.